<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_detail_movie_activity">Movie Details</string>
    <string name="action_settings">Settings</string>
    <string name="poster_base_path">http://image.tmdb.org/t/p/w185</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="movie_intent_extra_key">StringArrayIntentKey</string>

    <string name="default_movie_rating">0</string>
    <string name="default_movie_plot">Plot</string>
    <string name="default_movie_review_title">Reviews</string>
    <string name="default_movie_review">Review</string>
    <string name="default_movie_trailer_title">Trailers</string>
    <string name="default_movie_trailer">Trailer</string>
    <string name="default_movie_title">Title</string>
    <string name="default_movie_date">2000</string>
    <string name="movie_poster_description">MoviePoster</string>

    <!-- Name of the data base for saving favorite movies -->
    <string name="db_name">FavoriteMovies</string>


    <!-- Label for sort order preference [CHAR LIMIT=30] -->
    <string name="pref_sort_order_label">Sort Order</string>

    <!-- Key name for storing sort order in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_sort_order_key" translatable="false">Sort Order</string>

    <!-- Default setting for sort order preference [CHAR LIMIT=NONE] -->
    <string name="pref_sort_order_default" translatable="false">Most Popular</string>

    <string-array name="sort_order">
        <item>Most Popular</item>
        <item>Highest Rated</item>
        <item>Favorites</item>
    </string-array>

    <string-array name="sort_order_values">
        <item>popularity.desc</item>
        <item>vote_average.desc</item>
        <item>favorites</item>
    </string-array>
</resources>
