<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:id="@+id/movie_detail_fragment"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.popularmovies.MovieDetailActivityFragment">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.22"
                android:background="#009688"
                android:id="@+id/title_area">

                <TextView android:text="@string/default_movie_title"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="@dimen/text_title_padding"
                    android:id="@+id/textViewTitle"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_tall"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="0.4">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5">

                    <ImageView
                        android:id="@+id/detail_movies_imageView"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:padding="@dimen/image_padding"
                        android:layout_height="fill_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="fitStart"
                        android:contentDescription="@string/movie_poster_description">
                    </ImageView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView android:text="@string/default_movie_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/text_padding"
                            android:id="@+id/textViewDate"
                            android:textSize="@dimen/text_medium"/>

                        <TextView android:text="@string/default_movie_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textViewRating"
                            android:padding="@dimen/text_padding"
                            android:textSize="@dimen/text_small"/>
                    </LinearLayout>
                    <ToggleButton
                        android:id="@+id/imageButtonFavorite"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textOn=""
                        android:textOff=""
                        android:background="@drawable/button_background_selector"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.38">

                <TextView android:text="@string/default_movie_plot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewPlot"
                    android:padding="@dimen/text_padding"
                    android:background="@drawable/border"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.38"
                android:orientation="vertical">

                <TextView android:text="@string/default_movie_review_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewReviewTitle"
                    android:padding="@dimen/text_padding" />

                <TextView android:text="@string/default_movie_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewReview"
                    android:padding="@dimen/text_padding"
                    android:background="@drawable/border"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.38"
                android:orientation="vertical">

                <TextView android:text="@string/default_movie_trailer_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewTrailerTitle"
                    android:padding="@dimen/text_padding" />

                <TextView android:text="@string/default_movie_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewTrailer"
                    android:padding="@dimen/text_padding" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>


<!--






                    -->